@@ -28,7 +28,7 @@ requires:
   perl: 5.8.0
 resources:
   bugtracker: https://rt.cpan.org/Public/Dist/Display.html?Name=Random-Set
-  homepage: https://github.com/tupinek/Random-Set
+  homepage: https://github.com/michal-josef-spacek/Random-Set
   license: http://opensource.org/licenses/bsd-license.php
-  repository: git://github.com/tupinek/Random-Set
+  repository: git://github.com/michal-josef-spacek/Random-Set
 version: '0.07'
