@@ -65,7 +65,7 @@ SEE ALSO
         Class for random day generation.
 
 REPOSITORY
-    <https://github.com/tupinek/Random-Set>
+    <https://github.com/michal-josef-spacek/Random-Set>
 
 AUTHOR
     Michal Josef Špaček <mailto:skim@cpan.org>
