@@ -1,6 +1,7 @@
 0.07
  - Improve LICENSE AND COPYRIGHT section in doc.
  - Improve SYNOPSIS section in doc.
+ - Update author github username.
  - Update copyright years.
 
 0.06 2018-02-07T07:46:51+01:00
